--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
 
         <section>
-            <h2 class="summary-heading">Summary</h2>
+            <h2 class="section-heading">Summary</h2>
             <hr>
             <p>
                 I recently started to get involved in web programming. I attend various web development courses and
@@ -38,7 +38,7 @@
             </p>
         </section>
         <section>
-            <h2 class="skills-heading">Skills</h2>
+            <h2 class="section-heading">Skills</h2>
             <hr>
             <ul class="list">
                 <li>HTML5/CSS3</li>
@@ -47,17 +47,17 @@
             </ul>
         </section>
         <section>
-            <h2 class="examples-heading">Code examples</h2>
+            <h2 class="section-heading">Code examples</h2>
             <hr>
             <a href="https://github.com/Zartaich">GitHub</a>
         </section>
         <section>
-            <h2 class="experience-heading">Experience</h2>
+            <h2 class="section-heading">Experience</h2>
             <hr>
             <p>Passing courses. No real development experience.</p>
         </section>
         <section>
-            <h2 class="education-heading">Education</h2>
+            <h2 class="section-heading">Education</h2>
             <hr>
             <ul class="list">
                 <li>Javascript Web Development(IT Academy)</li>
@@ -67,7 +67,7 @@
             </ul>
         </section>
         <section>
-            <h2 class="english-level-heading">English</h2>
+            <h2 class="section-heading">English</h2>
             <hr>
             <ul class="list">
                 <li>English CEFR Level A2(Streamline)</li>
